# 2017_Arcade

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  arcade
bootstrap/lib/: lib2.cpp
documentation/: .~lock.Implementation.odt#  Implementation.odt
documentation/html/: _color_8hpp.html  _color_8hpp__dep__incl.map  _color_8hpp__dep__incl.md5  _color_8hpp_source.html  _core_8hpp_source.html  _d_l_loader_8hpp_source.html  _i_game_lib_8hpp.html  _i_game_lib_8hpp__dep__incl.map  _i_game_lib_8hpp__dep__incl.md5  _i_game_lib_8hpp__incl.map  _i_game_lib_8hpp__incl.md5  _i_game_lib_8hpp_source.html  _i_graphic_lib_8hpp.html  _i_graphic_lib_8hpp__dep__incl.map  _i_graphic_lib_8hpp__dep__incl.md5  _i_graphic_lib_8hpp__incl.map  _i_graphic_lib_8hpp__incl.md5  _i_graphic_lib_8hpp_source.html  _keys_8hpp.html  _keys_8hpp.js  _keys_8hpp__dep__incl.map  _keys_8hpp__dep__incl.md5  _keys_8hpp_source.html  _menu_8hpp_source.html  _n_curses_8hpp_source.html  _nibbler_8hpp_source.html  _pacman_8hpp_source.html  _pixel_box_8hpp.html  _pixel_box_8hpp__dep__incl.map  _pixel_box_8hpp__dep__incl.md5  _pixel_box_8hpp__incl.map  _pixel_box_8hpp__incl.md5  _pixel_box_8hpp_source.html  _score_8hpp_source.html  _sdl2_8hpp_source.html  _sfml_8hpp_source.html  _text_box_8hpp.html  _text_box_8hpp__dep__incl.map  _text_box_8hpp__dep__incl.md5  (+198 more)
games/: Makefile
include/: Color.cpp  Color.hpp  PixelBox.cpp  PixelBox.hpp  TextBox.cpp  TextBox.hpp
interfaces/: IGameLib.hpp  IGames.hpp  IGraphicalLib.hpp
lib/: Makefile
src/: main.cpp  main.hpp
templates/: DLLoader.hpp
(+229 files in other folders)
